BEEWEB-194 Fix problem with font colors having little contrast

--- a/src/octoprint/static/css/bee.css
+++ b/src/octoprint/static/css/bee.css
@@ -1370,7 +1370,7 @@ td.settings_users_actions .m-icon {
     border: 0px none !important;
 }
 .control-group label {
-    color: #898989;
+    color: #4a4a4a;
 }
 .controls .checkbox label {
     padding-top: 5px;
@@ -1755,6 +1755,11 @@ label:hover:before {
 }
 #confirmation_dialog .modal-body p{
     color: #898989 !important;
+}
+
+/*------------------------------------ Class Overrides ------------------------------------------------*/
+.muted {
+    color: #737373 !important;
 }
 
 /*-----------------------------------------------------------------------------------------------------*/
